[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ambhas"
version = "1.0.0"
authors = [
  { name="Sat Kumar Tomer", email="satkumartomer@gmail.com" },
]
description = "A library for data science in water"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage" = "https://github.com/tomersk/ambhas"
"Bug Tracker" = "https://github.com/tomersk/ambhas/issues"



